Updated German translation from Chris Leick. Closes: #735610

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ debhelper (9.20140810) UNRELEASED; urgency=medium
 
   * Added Portuguese translation of the man pages, by Américo Monteiro.
     Closes: #758043
+  * Updated German translation from Chris Leick.
+    Closes: #735610
 
  -- Joey Hess <joeyh@debian.org>  Wed, 13 Aug 2014 13:17:58 -0400
 
