--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-debhelper (9.20140810) UNRELEASED; urgency=medium
+debhelper (9.20140817) unstable; urgency=medium
 
   * Added Portuguese translation of the man pages, by Américo Monteiro.
     Closes: #758043
   * Updated German translation from Chris Leick.
     Closes: #735610
 
- -- Joey Hess <joeyh@debian.org>  Wed, 13 Aug 2014 13:17:58 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 17 Aug 2014 10:42:25 -0400
 
 debhelper (9.20140809) unstable; urgency=medium
 
