--- a/debhelper.pod
+++ b/debhelper.pod
@@ -697,7 +697,7 @@ B<DH_ALWAYS_EXCLUDE=CVS:.svn>
 
 A set of example F<debian/rules> files that use debhelper.
 
-=item L<http://kitenet.net/~joey/code/debhelper/>
+=item L<http://joeyh.name/code/debhelper/>
 
 Debhelper web site.
 
