dh_clean: Skip over .git, .svn, .bzr, .hg, and CVS directories and avoid cleaning their contents. Closes: #760033
I don't much like debhelper needing to contain yet another copy of every
bit of vcs cruft known to man; at least this only needs to be the
directories and not other dotfiles.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (9.20140818) UNRELEASED; urgency=medium
+
+  * dh_clean: Skip over .git, .svn, .bzr, .hg, and CVS directories
+    and avoid cleaning their contents. Closes: #760033
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 03 Oct 2014 15:13:08 -0400
+
 debhelper (9.20140817) unstable; urgency=medium
 
   * Added Portuguese translation of the man pages, by Américo Monteiro.
