--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-debhelper (9.20140818) UNRELEASED; urgency=medium
+debhelper (9.20141003) unstable; urgency=medium
 
   * dh_clean: Skip over .git, .svn, .bzr, .hg, and CVS directories
     and avoid cleaning their contents. Closes: #760033
 
- -- Joey Hess <joeyh@debian.org>  Fri, 03 Oct 2014 15:13:08 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 03 Oct 2014 15:16:00 -0400
 
 debhelper (9.20140817) unstable; urgency=medium
 
