--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+debhelper (9.20140817+nmu1) UNRELEASED; urgency=medium
+
+  * Non-maintainer upload.
+  * Depend on libdpkg-perl (>= 1.17.14) for build profiles support. Note to
+    backporters: If you remove that dependency, debhelper will throw an error
+    when a binary package stanza in debian/control has the Build-Profiles
+    field.
+  * Use libdpkg-perl functionality to parse the content of the Build-Profiles
+    field, if there is one. In that case, use libdpkg-perl to evaluate whether
+    the binary package should be built or not.
+
+ -- Johannes Schauer <j.schauer@email.de>  Thu, 09 Oct 2014 23:27:40 +0200
+
 debhelper (9.20140817) unstable; urgency=medium
 
   * Added Portuguese translation of the man pages, by Américo Monteiro.
