--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,5 @@
-debhelper (9.20141003) unstable; urgency=medium
+debhelper (9.20141010) UNRELEASED; urgency=medium
 
-  * dh_clean: Skip over .git, .svn, .bzr, .hg, and CVS directories
-    and avoid cleaning their contents. Closes: #760033
-
- -- Joey Hess <joeyh@debian.org>  Fri, 03 Oct 2014 15:16:00 -0400
-
-debhelper (9.20140817+nmu1) UNRELEASED; urgency=medium
-
-  * Non-maintainer upload.
   * Depend on libdpkg-perl (>= 1.17.14) for build profiles support. Note to
     backporters: If you remove that dependency, debhelper will throw an error
     when a binary package stanza in debian/control has the Build-Profiles
@@ -17,6 +9,13 @@ debhelper (9.20140817+nmu1) UNRELEASED; urgency=medium
     the binary package should be built or not.
 
  -- Johannes Schauer <j.schauer@email.de>  Thu, 09 Oct 2014 23:27:40 +0200
+
+debhelper (9.20141003) unstable; urgency=medium
+
+  * dh_clean: Skip over .git, .svn, .bzr, .hg, and CVS directories
+    and avoid cleaning their contents. Closes: #760033
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 03 Oct 2014 15:16:00 -0400
 
 debhelper (9.20140817) unstable; urgency=medium
 
