--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (9.20141022) unstable; urgency=low
+
+  * dh_installdeb: Sort conffile list so there is a stable order for
+    reproducible builds. Closes: #766384 Thanks, Jérémy Bobbio.
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 22 Oct 2014 14:43:12 -0400
+
 debhelper (9.20141010) unstable; urgency=medium
 
   [ Johannes Schauer ]
