my last commit to debhelper
wow!

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (9.20141107) unstable; urgency=medium
+
+  * I'm leaving Debian, and Debhelper needs a new maintainer.
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 07 Nov 2014 17:15:10 -0400
+
 debhelper (9.20141022) unstable; urgency=low
 
   * dh_installdeb: Sort conffile list so there is a stable order for
