d/control: Add myself as uploader
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (9.20141108) UNRELEASED; urgency=medium
+
+  * New maintainers debhelper.  (Closes: #768507)
+    - Add Niels Thykier to uploaders.
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 16 Nov 2014 16:53:10 +0100
+
 debhelper (9.20141107) unstable; urgency=medium
 
   * I'm leaving Debian, and Debhelper needs a new maintainer.
