d/control: Add myself as uploader
Signed-off-by: Bernhard R. Link <brlink@debian.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,11 @@
 debhelper (9.20141108) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
   * New maintainers debhelper.  (Closes: #768507)
     - Add Niels Thykier to uploaders.
+
+  [ Bernhard R. Link ]
+    - Add Bernhard Link to uploaders.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 16 Nov 2014 16:53:10 +0100
 
