dh_installdeb: Raise required dpkg version for symlink_to_dir to 1.17.14
It is needed in case of relative symlinks.

Closes: #770245

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,10 @@ debhelper (9.20141108) UNRELEASED; urgency=medium
   [ Bernhard R. Link ]
     - Add Bernhard Link to uploaders.
 
+  [ Axel Beckert ]
+  * dh_installdeb: Raise required dpkg version for symlink_to_dir to
+    1.17.14. It is needed in case of relative symlinks. (Closes: #770245)
+
  -- Niels Thykier <niels@thykier.net>  Sun, 16 Nov 2014 16:53:10 +0100
 
 debhelper (9.20141107) unstable; urgency=medium
