d/changelog: Fix wording of changelog entry
Thanks to "KiBi" for spotting it.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
 debhelper (9.20141108) UNRELEASED; urgency=medium
 
   [ Niels Thykier ]
-  * New maintainers debhelper.  (Closes: #768507)
+  * New debhelper maintainers.  (Closes: #768507)
     - Add Niels Thykier to uploaders.
   * dh_installdeb: Raise required dpkg version for dir_to_symlink to
     1.17.13 (see #769843, msg #10).  Thanks to Guillem Jover.
