--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20141108) UNRELEASED; urgency=medium
+debhelper (9.20141221) unstable; urgency=medium
 
   [ Niels Thykier ]
   * New debhelper maintainers.  (Closes: #768507)
@@ -13,7 +13,7 @@ debhelper (9.20141108) UNRELEASED; urgency=medium
   * dh_installdeb: Raise required dpkg version for symlink_to_dir to
     1.17.14. It is needed in case of relative symlinks. (Closes: #770245)
 
- -- Niels Thykier <niels@thykier.net>  Sun, 16 Nov 2014 16:53:10 +0100
+ -- Niels Thykier <niels@thykier.net>  Sun, 21 Dec 2014 21:21:18 +0100
 
 debhelper (9.20141107) unstable; urgency=medium
 
