--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (9.20141222) UNRELEASED; urgency=medium
+
+  * Add missing entry about #747141.
+
+ -- Niels Thykier <niels@thykier.net>  Mon, 22 Dec 2014 00:45:59 +0100
+
 debhelper (9.20141221) unstable; urgency=medium
 
   [ Niels Thykier ]
@@ -5,6 +11,12 @@ debhelper (9.20141221) unstable; urgency=medium
     - Add Niels Thykier to uploaders.
   * dh_installdeb: Raise required dpkg version for dir_to_symlink to
     1.17.13 (see #769843, msg #10).  Thanks to Guillem Jover.
+  * Refuse to build packages using --link-doc between arch:any and
+    arch:all packages (or vice versa) as it results in broken
+    packages.
+    - In compat 9 or less: Only during an actual binNMU.
+    - In compat 10 or newer: Unconditionally.
+    (Closes: #747141)
 
   [ Bernhard R. Link ]
     - Add Bernhard Link to uploaders.
