--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-debhelper (9.20141222) UNRELEASED; urgency=medium
+debhelper (9.20141222) unstable; urgency=medium
 
   * Add missing entry about #747141.
   * Fix typo in comment in dh_installman.  Thanks to Raphael
     Geissert for spotting it.  (Closes: #772502)
 
- -- Niels Thykier <niels@thykier.net>  Mon, 22 Dec 2014 00:45:59 +0100
+ -- Niels Thykier <niels@thykier.net>  Mon, 22 Dec 2014 01:02:52 +0100
 
 debhelper (9.20141221) unstable; urgency=medium
 
