dh_installdocs: Warn (or error in compat 10) on unsafe binNMUs
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (9.20141229) UNRELEASED; urgency=medium
+
+  * Revert detection of unsafe binNMUs under compat 9 and
+    earlier.  It had some false-negatives.  (Closes: #747141)
+
+ -- Niels Thykier <niels@thykier.net>  Mon, 29 Dec 2014 10:21:22 +0100
+
 debhelper (9.20141222) unstable; urgency=medium
 
   * Add missing entry about #747141.
