d/changelog: Correct typo
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
 debhelper (9.20141229) UNRELEASED; urgency=medium
 
   * Revert detection of unsafe binNMUs under compat 9 and
-    earlier.  It had some false-negatives.  (Closes: #773965)
+    earlier.  It had some false-positives.  (Closes: #773965)
 
  -- Niels Thykier <niels@thykier.net>  Mon, 29 Dec 2014 10:21:22 +0100
 
