--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20141229) UNRELEASED; urgency=medium
+debhelper (9.20150101) unstable; urgency=medium
 
   [ Niels Thykier ]
   * Revert detection of unsafe binNMUs under compat 9 and
