Open new entry for changes targeted at Stretch
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (9.20150101.1) UNRELEASED; urgency=medium
+
+  * Changes for Stretch - upload to experimental.
+
+ -- Niels Thykier <niels@thykier.net>  Thu, 01 Jan 2015 17:24:38 +0100
+
 debhelper (9.20150101) unstable; urgency=medium
 
   [ Niels Thykier ]
