--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
 debhelper (9.20150101.1) UNRELEASED; urgency=medium
 
   * Changes for Stretch - upload to experimental.
+  * dh_strip: Recognise .node as potential ELF binaries that
+    should be stripped like a regular shared library.  Thanks
+    to Paul Tagliamonte for the report.  (Closes: #668852)
 
  -- Niels Thykier <niels@thykier.net>  Thu, 01 Jan 2015 17:24:38 +0100
 
