Convert to "3.0 (native)" source format
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ debhelper (9.20150101.1) UNRELEASED; urgency=medium
   * dh_shlibdeps: Recognise .node as potential ELF binaries that
     should be processed like a regular shared library.  Thanks
     to Paul Tagliamonte for the report.  (Closes: #668851)
+  * Convert package to the 3.0 (native) format, so dpkg-source
+    strips the .git directory by default during build.
 
  -- Niels Thykier <niels@thykier.net>  Thu, 01 Jan 2015 17:24:38 +0100
 
