d/copyright: Reorder two paragraphs
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ debhelper (9.20150101.1) UNRELEASED; urgency=medium
     to Paul Tagliamonte for the report.  (Closes: #668851)
   * Convert package to the 3.0 (native) format, so dpkg-source
     strips the .git directory by default during build.
+  * Reorder two paragraphs in d/copyright to avoid one of them
+    being completely overwritten by the other.
 
  -- Niels Thykier <niels@thykier.net>  Thu, 01 Jan 2015 17:24:38 +0100
 
