--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ debhelper (9.20150101.1) UNRELEASED; urgency=medium
     strips the .git directory by default during build.
   * Reorder two paragraphs in d/copyright to avoid one of them
     being completely overwritten by the other.
+  * d/control: Use the canonical URLs for the Vcs-* fields.
 
  -- Niels Thykier <niels@thykier.net>  Thu, 01 Jan 2015 17:24:38 +0100
 
