--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,12 @@ debhelper (9.20150101.1) UNRELEASED; urgency=medium
   * Reorder two paragraphs in d/copyright to avoid one of them
     being completely overwritten by the other.
   * d/control: Use the canonical URLs for the Vcs-* fields.
+  * dh_makeshlibs: Apply patch from Jérémy Bobbio to ensure
+    stable ordering of generated shlibs files.
+    (Closes: #774100)
+  * dh_icons: Apply patch from Jérémy Bobbio to ensure stable
+    ordering of the icon list inserted into generated maintainer
+    scripts.  (Closes: #774102)
 
  -- Niels Thykier <niels@thykier.net>  Thu, 01 Jan 2015 17:24:38 +0100
 
