dh_compress: Skip compression of xhtml files
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -21,6 +21,8 @@ debhelper (9.20150101.1) UNRELEASED; urgency=medium
   * Dh_lib: Add a public "make_symlink" subroutine allowing
     dh_*-like tools to generate policy compliant symlinks without
     invoking dh_link.  (Closes: #610173)
+  * dh_compress: Apply patch from Osamu Aoki to avoid compressing
+    ".xhtml" files.  (Closes: #740405)
 
  -- Niels Thykier <niels@thykier.net>  Thu, 01 Jan 2015 17:24:38 +0100
 
