dh_gconf: Only add depends if a scheme is installed
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,9 @@ debhelper (9.20150101.1) UNRELEASED; urgency=medium
     invoking dh_link.  (Closes: #610173)
   * dh_compress: Apply patch from Osamu Aoki to avoid compressing
     ".xhtml" files.  (Closes: #740405)
+  * dh_gconf: Apply patch from Josselin Mouette to avoid
+    dependency on gconf2 for installs of non-schema files.
+    (Closes: #592958)
 
  -- Niels Thykier <niels@thykier.net>  Thu, 01 Jan 2015 17:24:38 +0100
 
