d/changelog: Add entry for patch from Guillem Jover

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 debhelper (9.20150101.1) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
   * Changes for Stretch - upload to experimental.
   * dh_strip: Recognise .node as potential ELF binaries that
     should be stripped like a regular shared library.  Thanks
@@ -26,6 +27,10 @@ debhelper (9.20150101.1) UNRELEASED; urgency=medium
   * dh_gconf: Apply patch from Josselin Mouette to avoid
     dependency on gconf2 for installs of non-schema files.
     (Closes: #592958)
+
+  [ Bernhard R. Link ]
+  * Dh_lib: apply patch from Guillem Jover to support case-insensitive
+    control field names.
 
  -- Niels Thykier <niels@thykier.net>  Thu, 01 Jan 2015 17:24:38 +0100
 
