dh_fixperms: Correct permissions of reportbug files/scripts
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,9 @@ debhelper (9.20150101.1) UNRELEASED; urgency=medium
   * dh_gconf: Apply patch from Josselin Mouette to avoid
     dependency on gconf2 for installs of non-schema files.
     (Closes: #592958)
+  * dh_fixperms: Correct permissions of reportbug files and scripts.
+    Thanks to Fabian Greffrath for the report and a basic patch.
+    (Closes: #459548)
 
   [ Bernhard R. Link ]
   * Dh_lib: apply patch from Guillem Jover to support case-insensitive
