--- a/debian/changelog
+++ b/debian/changelog
@@ -33,7 +33,7 @@ debhelper (9.20150101.1) UNRELEASED; urgency=medium
 
   [ Bernhard R. Link ]
   * Dh_lib: apply patch from Guillem Jover to support case-insensitive
-    control field names.
+    control field names. (Closes: #772129)
 
  -- Niels Thykier <niels@thykier.net>  Thu, 01 Jan 2015 17:24:38 +0100
 
