d/rules: Remove announcedir target
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -40,6 +40,8 @@ debhelper (9.20150101.1) UNRELEASED; urgency=medium
   * dh_lintian: Under compat 9, the debian/lintian-overrides are now
     executed if they have the exec-bit set like the debian/install
     files.  Thanks to Axel Beckert for the report.  (Closes: #698500)
+  * d/rules: Remove makefile target only intended for/used by the
+    previous maintainer.
 
   [ Bernhard R. Link ]
   * Dh_lib: apply patch from Guillem Jover to support case-insensitive
