dh_strip: Test for --enable-deterministic-archives before using it
Wheezy does not support it, so a lot of derivatives probably do not
support it either.  While it is questionable that debhelper will be
backported, it has happened before.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -47,6 +47,10 @@ debhelper (9.20150101.1) UNRELEASED; urgency=medium
     symlinks).  Thanks to Joss Mouette for the suggestion.
     (Closes: #549990)
   * autoscripts/post{inst,rm}-makeshlibs-c10: New files.
+  * dh_strip: Pass the --enable-deterministic-archives option to strip
+    when it is stripping static libaries.  This avoids some
+    unnecessary non-determinism in builds.  Based on patch by
+    Andrew Ayer.
 
   [ Bernhard R. Link ]
   * Dh_lib: apply patch from Guillem Jover to support case-insensitive
