Let dh_makeshlibs install shlibs files (instead of dh_installdeb)
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -559,6 +559,12 @@ I<ldconfig> in its generated maintainer scripts snippets.  The new
 call will only update the ld cache (instead of also updating
 symlinks).
 
+=item -
+
+B<dh_installdeb> no longer installs a maintainer-provided
+debian/I<package>.shlibs file.  This is now done by B<dh_makeshlibs>
+instead.
+
 =back
 
 =back
