--- a/debian/changelog
+++ b/debian/changelog
@@ -74,6 +74,10 @@ debhelper (9.20150101.1) UNRELEASED; urgency=medium
     (Closes: #659044)
   * dh_usrlocal: Apply patch from Jérémy Bobbio to generate
     deterministic output.  (Closes: #775020)
+  * dh_makelibs: In compat 10, install the maintainer-provided shlibs
+    file (replacing the generated one).  (Closes: #676168)
+  * dh_installdeb: In compat 10, stop installing the maintainer-provided
+    shilibs file as it is now done by dh_makeibs instead.
 
   [ Bernhard R. Link ]
   * Dh_lib: apply patch from Guillem Jover to support case-insensitive
