Fix a typo (libaries -> libraries).
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -48,7 +48,7 @@ debhelper (9.20150101.1) UNRELEASED; urgency=medium
     (Closes: #549990)
   * autoscripts/post{inst,rm}-makeshlibs-c10: New files.
   * dh_strip: Pass the --enable-deterministic-archives option to strip
-    when it is stripping static libaries.  This avoids some
+    when it is stripping static libraries.  This avoids some
     unnecessary non-determinism in builds.  Based on patch by
     Andrew Ayer.
   * dh_install, dh_installdocs, dh_installexamples and dh_installinfo:
