dh_installdocs: Use ${binary:Version} in substvars w. --link-doc
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -65,6 +65,10 @@ debhelper (9.20150101.1) UNRELEASED; urgency=medium
   * dh_gconf: Apply patch from Martin Koeppe to avoid adding a layer
     of shell-escaping to a printed command line when the command was
     in fact run without said layet of shell-escaping.
+  * dh_installdocs: Use ${binary:Version} for generating dependencies
+    with "--link-doc" instead of trying to determine the correct
+    package version.  Thanks to Stephen Kitt for reporting this
+    issue.  (Closes: #747141)
 
   [ Bernhard R. Link ]
   * Dh_lib: apply patch from Guillem Jover to support case-insensitive
