Fix typo in current changelog entry

--- a/debian/changelog
+++ b/debian/changelog
@@ -64,7 +64,7 @@ debhelper (9.20150101.1) UNRELEASED; urgency=medium
     (Closes: #438930)
   * dh_gconf: Apply patch from Martin Koeppe to avoid adding a layer
     of shell-escaping to a printed command line when the command was
-    in fact run without said layet of shell-escaping.
+    in fact run without said layer of shell-escaping.
   * dh_installdocs: Use ${binary:Version} for generating dependencies
     with "--link-doc" instead of trying to determine the correct
     package version.  Thanks to Stephen Kitt for reporting this
