dh_installdocs: Document a caveat of using --link-doc
Warn about the possible need for a "dir to symlink" (or "symlink to
dir") migration when using (or stopping the use of) --link-doc.  Refer
people to dh_installdeb's maintscript feature for implementing said
migration.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -69,6 +69,9 @@ debhelper (9.20150101.1) UNRELEASED; urgency=medium
     with "--link-doc" instead of trying to determine the correct
     package version.  Thanks to Stephen Kitt for reporting this
     issue.  (Closes: #747141)
+  * dh_installdocs.1: Document that --link-doc may in some cases
+    require a dir to symlink (or symlink to dir) migration.
+    (Closes: #659044)
 
   [ Bernhard R. Link ]
   * Dh_lib: apply patch from Guillem Jover to support case-insensitive
