dh_usrlocal: output dir list in a stable order
We now sort the directory lists in order to guarantee a stable output.
This was preventing some packages to build reproducibly.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -72,6 +72,8 @@ debhelper (9.20150101.1) UNRELEASED; urgency=medium
   * dh_installdocs.1: Document that --link-doc may in some cases
     require a dir to symlink (or symlink to dir) migration.
     (Closes: #659044)
+  * dh_usrlocal: Apply patch from Jérémy Bobbio to generate
+    deterministic output.  (Closes: #775020)
 
   [ Bernhard R. Link ]
   * Dh_lib: apply patch from Guillem Jover to support case-insensitive
