dh_compress: exclude .xz .lzma and .lz files from compression

--- a/debian/changelog
+++ b/debian/changelog
@@ -82,6 +82,8 @@ debhelper (9.20150101.1) UNRELEASED; urgency=medium
   * autoconf is always passed one of
      --enable-silent-rules (if DH_QUIET is set) or
      --disable-silent-rules (otherwise). (Closes: #551463, #680686)
+  * dh_compress: exclude .xz .lzma and .lz files from compression
+    (Closes: #778927)
 
  -- Niels Thykier <niels@thykier.net>  Thu, 01 Jan 2015 17:24:38 +0100
 
