Add changelog entry for previous commit

--- a/debian/changelog
+++ b/debian/changelog
@@ -85,6 +85,10 @@ debhelper (9.20150101.1) UNRELEASED; urgency=medium
   * dh_compress: exclude .xz .lzma and .lz files from compression
     (Closes: #778927)
 
+  [ Jason Pleau ]
+  * dh_installchangelogs: Add CHANGES.md to the list of common changelog
+    filenames
+
  -- Niels Thykier <niels@thykier.net>  Thu, 01 Jan 2015 17:24:38 +0100
 
 debhelper (9.20150101) unstable; urgency=medium
