dh_installchangelogs: Consistent suffix search order
Now iterates over common suffixes and common base names separately.
Makes the code easier readable and easier to extent.

Looks for "history.md" now, too. (Was a so far ignored suffix/base
name combination.)

--- a/debian/changelog
+++ b/debian/changelog
@@ -89,6 +89,13 @@ debhelper (9.20150101.1) UNRELEASED; urgency=medium
   * dh_installchangelogs: Add CHANGES.md to the list of common changelog
     filenames
 
+  [ Axel Beckert ]
+  * dh_installchangelogs: Consistent suffix search order (none, ".txt",
+    ".md") for all upstream changelog file names ("changelog", "changes",
+    "history").
+      + Looks for "history.md" now, too.
+      + Makes it easier to add base names or suffixes in the future.
+
  -- Niels Thykier <niels@thykier.net>  Thu, 01 Jan 2015 17:24:38 +0100
 
 debhelper (9.20150101) unstable; urgency=medium
