dh_installchangelogs: Also look for changelogs with .rst suffix

--- a/debian/changelog
+++ b/debian/changelog
@@ -95,6 +95,7 @@ debhelper (9.20150101.1) UNRELEASED; urgency=medium
     "history").
       + Looks for "history.md" now, too.
       + Makes it easier to add base names or suffixes in the future.
+  * dh_installchangelogs: Also look for changelogs with .rst suffix.
 
  -- Niels Thykier <niels@thykier.net>  Thu, 01 Jan 2015 17:24:38 +0100
 
