Add forgotten mentioning of #779471 in debian/changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -87,7 +87,7 @@ debhelper (9.20150101.1) UNRELEASED; urgency=medium
 
   [ Jason Pleau ]
   * dh_installchangelogs: Add CHANGES.md to the list of common changelog
-    filenames
+    filenames (Closes: #779471)
 
   [ Axel Beckert ]
   * dh_installchangelogs: Consistent suffix search order (none, ".txt",
