--- a/debian/changelog
+++ b/debian/changelog
@@ -97,6 +97,10 @@ debhelper (9.20150101.1) UNRELEASED; urgency=medium
       + Makes it easier to add base names or suffixes in the future.
   * dh_installchangelogs: Also look for changelogs with .rst suffix.
 
+  [ Tianon Gravi ]
+  * debhelper.pod: Clarify "ENVIRONMENT" requirements for Makefile syntax.
+    (Closes: #780133)
+
  -- Niels Thykier <niels@thykier.net>  Thu, 01 Jan 2015 17:24:38 +0100
 
 debhelper (9.20150101) unstable; urgency=medium
