dh_installdocs: Remove non-idempotence remark
It used to do maintainer scripts.  However that feature is now done
via triggers and accordingly the remark is now unncessary.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -78,6 +78,8 @@ debhelper (9.20150101.1) UNRELEASED; urgency=medium
     file (replacing the generated one).  (Closes: #676168)
   * dh_installdeb: In compat 10, stop installing the maintainer-provided
     shlibs file as it is now done by dh_makeshlibs instead.
+  * dh_installdocs: Remove remark about dh_installdocs not being
+    idempotent as it no longer adds anything to maintainer scripts.
 
   [ Bernhard R. Link ]
   * Dh_lib: apply patch from Guillem Jover to support case-insensitive
